-
Bug
-
Resolution: Done
-
P1: Critical
-
5.0.0
-
None
MapItemView does not have proper support for standard QML models like XmlListModel – it only supports QAbstractItemModel models like the ones in geocoding and places. This is a bug, as the documentation does not make this clear, and users have a clear expectation that QML model/view classes should work with each other and not have arbitrary restrictions like this.
| For Gerrit Dashboard: QTBUG-25157 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 22423,2 | Add support for QListModelInterface-derived models with MapItemView | master | qt/qtlocation | Status: MERGED | +2 | 0 |