Add support for QListModelInterface-derived models with MapItemView

Task-number: QTBUG-25157
Change-Id: Iaa5556b9b4d5005545609eddf00b5db01be4120f
Reviewed-by: Alex <alex.blasche@nokia.com>